--- a/hkd-option-parsing.cabal
+++ b/hkd-option-parsing.cabal
@@ -21,14 +21,31 @@ maintainer:         ssbothwell@gmail.com
 -- category:
 extra-source-files: CHANGELOG.md
 
+library
+  exposed-modules:  CliParser
+                  , EnvParser
+                  , Options
+  hs-source-dirs: src
+  default-language: Haskell2010
+  build-depends:    base ^>=4.14.1.0
+                  , higgledy
+                  , lens
+                  , network-uri
+                  , optparse-applicative
+
 executable hkd-option-parsing
-    main-is:          Main.hs
+  main-is:          Main.hs
 
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
+  -- Modules included in this executable, other than Main.
+  -- other-modules:
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    base ^>=4.14.1.0
-    hs-source-dirs:   app
-    default-language: Haskell2010
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:
+  build-depends:    base ^>=4.14.1.0
+                  , hkd-option-parsing
+                  , higgledy
+                  , lens
+                  , network-uri
+                  , optparse-applicative
+  hs-source-dirs:   app
+  default-language: Haskell2010
